# deno

./: .dlint.json  Cargo.toml  server.ts  test.ts
.cargo/: config.toml
cli/: Cargo.toml  build.rs  errors.rs  factory.rs  flags.rs  graph_util.rs  http_util.rs  lib.rs  main.rs  module_graph.rs  standalone.rs  version.rs
cli/args/: flags.rs  mod.rs
cli/cache/: mod.rs
cli/lib/: worker.rs
cli/lsp/: analysis.rs  diagnostics.rs  language_server.rs  mod.rs
cli/ops/: websocket.rs
cli/rt/: run.rs
cli/tools/: bundle.rs  mod.rs  repl.rs  replay.rs  run.rs  upgrade.rs
core/: Cargo.toml  lib.rs
ext/canvas/: 01_canvas.js  Cargo.toml  bitmaprenderer.rs  byow.rs  canvas.rs  lib.rs
ext/web/: 17_ml.js  Cargo.toml  geometry.rs  lib.rs  ml.rs
ext/webgpu/: adapter.rs  binding.rs  buffer.rs  bundle.rs  command_encoder.rs  compute_pass.rs  device.rs  lib.rs  pipeline.rs  queue.rs  render_pass.rs  sampler.rs  shader.rs  surface.rs  texture.rs
ext/webstorage/: 02_indexeddb.js
extensions/fetch/: 12_compression.js  Cargo.toml  lib.rs
extensions/websocket/: 02_websocketstream.js
extensions/webstorage/: 01_webstorage.js  02_indexeddb.js  Cargo.toml  indexeddb.rs  lib.rs  webstorage.rs
libs/core/: inspector.rs  lib.rs  ops.rs  trace.rs
op_crates/crypto/: lib.rs
op_crates/fetch/: lib.rs
op_crates/url/: lib.rs
op_crates/webserial/: 01_webserial.js  Cargo.toml  README.md  lib.rs
op_crates/websocket/: lib.rs
proc_macros/: Cargo.toml  lib.rs
runtime/: Cargo.toml  build.rs  errors.rs  lib.rs  web_worker.rs  worker.rs
runtime/js/: 98_global_scope.js  (+2 more)
(+23 files in other folders)
