[package]
name = "deno_proc_macros"
version = "0.1.0"
edition = "2018"
authors = ["the Deno authors"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/denoland/deno"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.9"
syn = { version = "1.0.63", features = ["extra-traits", "full", "parsing"] }
