# Copyright 2018-2021 the Deno authors. All rights reserved. MIT license.

[package]
name = "deno_webserial"
version = "0.1.0"
edition = "2018"
description = "Implementation of Web Serial API for Deno"
authors = ["the Deno authors"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/denoland/deno"

[lib]
path = "lib.rs"

[dependencies]
deno_core = { version = "0.77.0", path = "../../core" }
serde = { version = "1.0.121", features = ["derive"] }
serialport = "4.0.0"
